--- a/reports/knitr-pdf/report.Rnw
+++ b/reports/knitr-pdf/report.Rnw
@@ -22,7 +22,7 @@
 
 % Graphics and colours
 \usepackage{graphicx}
-\graphicspath{{../figures/}{logos/}}
+\graphicspath{{../logos/}}
 \usepackage{colortbl}
 \usepackage{xcolor}
 
@@ -74,8 +74,8 @@
 % Header and footer
 \usepackage{fancyhdr}
 \pagestyle{fancyplain}
-\lhead{\includegraphics[height=1.1cm, width=2.96cm]{logos/nbis_logo.pdf}}
-\rhead{\includegraphics[height=1.3cm, width=4cm]{logos/scilifelab_logo.jpg}}
+\lhead{\includegraphics[height=1.1cm, width=2.96cm]{nbis_logo.pdf}}
+\rhead{\includegraphics[height=1.3cm, width=4cm]{scilifelab_logo.jpg}}
 \renewcommand{\headrulewidth}{0pt}
 \fancyfoot[C]{\sffamily\fontsize{9pt}{9pt}\selectfont\thepage}
 
@@ -239,8 +239,8 @@ toLatex(sessionInfo(), locale = FALSE)
 @ 
 
 % REFERENCES
-\bibliographystyle{myunsrt.bst}
-\bibliography{report/references.bib}
+\bibliographystyle{../myunsrt.bst}
+\bibliography{../references.bib}
 
 % END DOCUMENT
 \end{document}  
