--- a/reports/rmarkdown/report.Rmd
+++ b/reports/rmarkdown/report.Rmd
@@ -10,7 +10,6 @@ params:
     organisation: "Karolinska Institutet"
     staff_name: "Supp Ortstaff"
     staff_mail: "supp.ortstaff@nbis.se"
-    staff_web: "https://nbis.se/about/staff/supp-ortstaff/"
 title: "`r params$project_title`"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output:
@@ -32,19 +31,20 @@ knitr::opts_chunk$set(fig.width  = 12,
 ```{r Report variables, echo = FALSE}
 affil <- paste("National Bioinformatics Infrastructure Sweden, Science for",
     "Life Laboratory, Stockholm University")
-link_support <- "http://nbis.se/support/support.html"
-link_uppmax <- paste("http://uppmax.uu.se/support-sv/faq/general-",
-    "miscellaneous-faq/acknowledging-uppmax--snic--and-uppnex")
+link_support <- "https://nbis.se/services/bioinformatics"
+link_uppmax <- paste("https://www.uppmax.uu.se/support/faq/",
+    "general-miscellaneous-faq/acknowledging-uppmax-and-naiss/")
 link_authorship <- "http://www.icmje.org/recommendations/"
-link_agreement <- "http://nbis.se/assets/doc/nbis-support-useragreement.pdf"
-link_acknowledge <- paste("https://ngisweden.scilifelab.se/info/faq#how-do",
-                          "-i-acknowledge-ngi-in-my-publication")
-link_sensitive_data <- "https://nbis.se/support/human-data.html"
+link_agreement <- "https://nbis.se/uploads/nbis_support_useragreement_f2c52d955b.pdf"
+link_acknowledge <- paste("https://ngisweden.scilifelab.se/resources/",
+                          "getting-started-at-ngi/")
+link_sensitive_data <- "https://data-guidelines.scilifelab.se/topics/sharing-human-data/"
+link_data_center <- "https://www.scilifelab.se/data/"
 ```
 
 # Project information
 
- * Remine issue: **`r params$redmine_issue`**
+ * Redmine issue: **`r params$redmine_issue`**
  * NBIS staff: **`r params$staff_name`**
  * Request by: **`r params$requester_name`**
  * Principal investigator: **`r params$pi_name`**
@@ -68,45 +68,42 @@ this expensive space.
 
 The responsibility for data archiving lies with universities and we recommend
 asking your local IT for support with long-term data storage. The
-[Data Center](https://www.scilifelab.se/data/) at SciLifeLab may also be
+[Data Center](`r link_data_center`) at SciLifeLab may also be
 of help with discussing other options.
 
 Please note that special considerations may apply to human-derived, sensitive
 personal data. This should be handled according to specific laws and
-regulations as outlined at the [NBIS website](`r link_sensitive_data`).
+regulations as outlined at the [SciLifeLab website](`r link_sensitive_data`).
 
 ## Acknowledgements
 If you are presenting the results in a paper, at a workshop or at a conference,
 we kindly remind you to acknowledge us according to the signed
 [NBIS User Agreement](`r link_agreement`):
 
-[NBIS staff should be included as co-authors](`r params$staff_web`) if the
+Please acknowledge NBIS like so: *Support by NBIS (National
+Bioinformatics Infrastructure Sweden) is gratefully acknowledged.*
+
+NBIS staff should also be included as co-authors if the
 support work leads to a publication and when this is merited in accordance to
 the ethical recommendations for authorship, *i.e.* the [ICMJE
 recommendations](`r link_authorship`). If applicable, please include
-*`r params$staff_name`, `r affil`* as co-author. If the above is not
-applicable, please acknowledge NBIS like so: *Support by NBIS (National
-Bioinformatics Infrastructure Sweden) is gratefully acknowledged.*
+*`r params$staff_name`, `r affil`* as co-author. 
 
 In addition, Uppmax kindly asks you to [acknowledge UPPMAX and
-SNIC](`r link_uppmax`). If applicable, please add: *The computations were
-performed on resources provided by SNIC through Uppsala Multidisciplinary
-Center for Advanced Computational Science (UPPMAX) under Project
-`r params$uppmax_project`.*
+NAISS](`r link_uppmax`). If applicable, please add: *The computations/
+data handling/[SIMILAR] were/was enabled by resources in project 
+`r params$uppmax_project` provided by the National Academic Infrastructure for 
+Supercomputing in Sweden (NAISS) at UPPMAX, funded by the Swedish Research 
+Council through grant agreement no. 2022-06725*
 
 In any and all publications based on data from NGI Sweden, the authors
-must [acknowledge SciLifeLab, NGI and Uppmax](`r link_acknowledge`), like so:
-*The authors would like to acknowledge support from Science for Life
-Laboratory, the National Genomics Infrastructure, NGI, and Uppmax for providing
-assistance in massive parallel sequencing and computational infrastructure.*
+must [acknowledge SciLifeLab, NGI, VR and UPPMAX](`r link_acknowledge`).
 
 ## Closing procedures
-You should soon be contacted by one of our managers, Jessica Lindvall
-*(jessica.lindvall@nbis.se)* or Henrik Lantz
-*(henrik.lantz@nbis.se)*, with a request to close down the project in our
-internal system and for invoicing matters. If we do not hear from you within
-**30 days** the project will be automatically closed and invoice sent.
-Again, we would like to remind you about data responsibility and
+You should soon be contacted by one of our managers with a request to close down 
+the project in our internal system and for invoicing matters. If we do not hear 
+from you within **30 days** the project will be automatically closed and invoice
+sent. Again, we would like to remind you about data responsibility and
 acknowledgements, see the sections on data responsibilities and
 acknowledgments.
 
