--- a/reports/sweave/report.Rnw
+++ b/reports/sweave/report.Rnw
@@ -11,7 +11,6 @@
 % Staff-specific info
 \newcommand{\staffName}{Supp Ortstaff}
 \newcommand{\staffMail}{supp.ortstaff@nbis.se}
-\newcommand{\staffWeb}{https://nbis.se/about/staff/supp-ortstaff/}
 
 % PREAMBLE --------------------------------------------------------------------
 \documentclass[oneside, 12pt]{article}
@@ -82,15 +81,17 @@
 % General NBIS- and support-related info
 \newcommand{\affiliations}{National Bioinformatics Infrastructure Sweden, %
     Science for Life Laboratory, Stockholm University}
-\newcommand{\supportWeb}{http://nbis.se/support/support.html}
-\newcommand{\uppmaxWeb}{http://uppmax.uu.se/support-sv/faq/general-%
-    miscellaneous-faq/acknowledging-uppmax--snic--and-uppnex}
+\newcommand{\supportWeb}{https://nbis.se/services/bioinformatics}
+\newcommand{\uppmaxWeb}{https://www.uppmax.uu.se/support/faq/%
+    general-miscellaneous-faq/acknowledging-uppmax-and-naiss/}
 \newcommand{\ICMJE}{http://www.icmje.org/recommendations/}
-\newcommand{\userAgreement}{http://nbis.se/assets/doc/nbis-support-%
-    useragreement.pdf}
-\newcommand{\ngiSweden}{https://ngisweden.scilifelab.se/info/faq\#%
-    how-do-i-acknowledge-ngi-in-my-publication}
-\newcommand{\sensitiveData}{https://nbis.se/support/human-data.html}
+\newcommand{\userAgreement}{https://nbis.se/uploads/nbis_support_useragreement%
+    _f2c52d955b.pdf}
+\newcommand{\ngiSweden}{https://ngisweden.scilifelab.se/resources/%
+    getting-started-at-ngi/}
+\newcommand{\sensitiveData}{https://data-guidelines.scilifelab.se/topics/%
+    sharing-human-data/}
+\newcommand{\dataCenter}{https://www.scilifelab.se/data/}
 
 % BEGIN DOCUMENT
 \begin{document}
@@ -171,12 +172,12 @@ this expensive space.
 
 The responsibility for data archiving lies with universities and we recommend
 asking your local IT for support with long-term data storage. The
-\href{https://www.scilifelab.se/data/}{Data Center} at SciLifeLab may also be
+\href{\dataCenter}{Data Center} at SciLifeLab may also be
 of help with discussing other options.
 
 Please note that special considerations may apply to human-derived, sensitive
 personal data. This should be handled according to specific laws and
-regulations as outlined at the \href{\sensitiveData}{NBIS website}.
+regulations as outlined at the \href{\sensitiveData}{SciLifeLab website}.
 
 \subsection{Acknowledgments}
 \label{acknowledgments}
@@ -184,24 +185,25 @@ If you are presenting the results in a paper, at a workshop or at a conference,
 we kindly remind you to acknowledge us according to the signed
 \href{\userAgreement}{NBIS User Agreement}:
 
-\href{\staffWeb}{NBIS staff should be included as co-authors} if the support
-work leads to a publication and when this is merited in accordance to the
-ethical recommendations for authorship, \emph{i.e.} the \href{\ICMJE}{ICMJE
-recommendations}. If applicable, please include \emph{\staffName, \affiliations}
-as co-author. If the above is not applicable, please acknowledge NBIS like so:
+Please acknowledge NBIS like so:
 \emph{Support by NBIS (National Bioinformatics Infrastructure Sweden) is
 gratefully acknowledged.}
 
+NBIS staff should be included as co-authors if the support
+work leads to a publication and when this is merited in accordance to the
+ethical recommendations for authorship, \emph{i.e.} the \href{\ICMJE}{ICMJE
+recommendations}. If applicable, please include \emph{\staffName, \affiliations}
+as co-author. 
+
 In addition, Uppmax kindly asks you to \href{\uppmaxWeb}{acknowledge UPPMAX and
-SNIC}. If applicable, please add: \emph{The computations were performed on
-resources provided by SNIC through Uppsala Multidisciplinary Center for
-Advanced Computational Science (UPPMAX) under Project {\uppmaxProj}.}
+NAISS}. If applicable, please add: \emph{The computations/data handling/
+[SIMILAR] were/was enabled by resources in project {\uppmaxProj} provided by 
+the National Academic Infrastructure for Supercomputing in Sweden (NAISS) at 
+UPPMAX, funded by the Swedish Research Council through grant agreement 
+no. 2022-06725.}
 
 In any and all publications based on data from NGI Sweden, the authors
-must \href{\ngiSweden}{acknowledge SciLifeLab, NGI and Uppmax}, like so:
-\emph{The authors would like to acknowledge support from Science for Life
-Laboratory, the National Genomics Infrastructure, NGI, and Uppmax for providing
-assistance in massive parallel sequencing and computational infrastructure.}
+must \href{\ngiSweden}{acknowledge SciLifeLab, NGI, VR and UPPMAX}.
 
 % MATERIALS AND METHODS
 \newpage
@@ -218,11 +220,11 @@ assistance in massive parallel sequencing and computational infrastructure.}
 % CLOSING PROCEDURES
 \newpage
 \section{Closing procedures}
-You should soon be contacted by one of our managers, Jessica Lindvall
-\emph{(jessica.lindvall@nbis.se)} or Henrik Lantz
-\emph{(henrik.lantz@nbis.se)}, with a request to close down the project in our
-internal system and for invoicing matters. If we do not hear from you within
-\textbf{30 days} the project will be automatically closed and invoice sent.
+You should soon be contacted by one of our managers with a request to close 
+down the project in our internal system and for invoicing matters. If we do 
+not hear from you within \textbf{30 days} the project will be automatically 
+closed and invoice sent.
+
 Again, we would like to remind you about data responsibility and
 acknowledgements, see \nameref{DataRes} and \nameref{acknowledgments}.
 
